most of the mulcounter work